--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 github: [Haris-khan-Durrani]
-patreon: Haris-khan-Durrani
-tidelift: npm/Mainland-activity-list
+buymeacoffee: hariskha
 custom: # ["https://www.buymeacoffee.com/hariskha",hariskhandurrani.com]
