--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 github: [Haris-khan-Durrani]
-buymeacoffee: hariskha
+[![Buy Me a Coffee](https://img.shields.io/badge/Donate-Buy%20Me%20a%20Coffee-orange.svg)](https://www.buymeacoffee.com/hariskha)
 custom: # ["https://www.buymeacoffee.com/hariskha",hariskhandurrani.com]
