--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,13 @@
-# These are supported funding model platforms
-github: [Haris-khan-Durrani]
-[![Buy Me a Coffee](https://img.shields.io/badge/Donate-Buy%20Me%20a%20Coffee-orange.svg)](https://www.buymeacoffee.com/hariskha)
-custom: # ["https://www.buymeacoffee.com/hariskha",hariskhandurrani.com]
+github: 
+  - Haris-khan-Durrani
+
+buymeacoffee: 
+  hariskha
+
+custom: 
+  - name: Haris Khan Durrani
+    url: https://www.buymeacoffee.com/hariskha
+    description: Support my work by buying me a coffee!
+  - name: Haris Khan Durrani's Website
+    url: https://hariskhandurrani.com
+    description: Visit my personal website for more information.
