--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,8 +1,6 @@
-github: 
-  - Haris-khan-Durrani
+github: - Haris-khan-Durrani
 
-buymeacoffee: 
-  hariskha
+buymeacoffee: hariskha
 
 custom: 
   - name: Haris Khan Durrani
